# embedded_systems_team_project

./: CMakeLists.txt  Cocktail table.csv  Cocktail table.xlsx  DataClass.cpp  IngedientIndexClass.cpp  IngredientClass.cpp  backent.cpp  cmake_install.cmake  cocktail_table.csv  main.cpp  readme.md  readme.txt
CAD/: BOM.xlsx
CAD/DXF/: BACK_PANEL.DXF  SIDE_PANEL.DXF  TOP_PLATE.DXF  WIDE_BASE.DXF
CAD/STL/: PRINT_PARAMETERS.xlsx  TOP_PLATE.3MF  TOP_PLATE.STL  mid_panel.3MF  mid_panel.STL
CAD/step files/: MAN_AXLE_DRIVE_GEAR_2M_20T.STEP  PiTFT PLUS 3.5inch.stp  TOP_PLATE.STEP  WIDE_BASE.STEP
CocktailMachine/: CMakeLists.txt  cocktail_machine  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
CocktailMachine/CAD/DXF/: 5MM_MID_PANEL.DXF  MID_PANEL.DXF  TOP_PLATE.DXF
CocktailMachine/CAD/STL/: BRACKET_THROUGH.3MF  BRACKET_THROUGH.STL  SQUARE TUBE BRACKET.3MF  SQUARE TUBE BRACKET.STL
CocktailMachine/CAD/step files/: BACK_PANEL.STEP  D-SUN-IRdetector1.step  SIDE_PANEL.STEP  ssg-5p-5.stp
CocktailMachine/Data/: cocktail_table.csv  cocktail_table.xlsm  index_table.csv  ingredient_position_fill.csv
CocktailMachine/Include/: Data.h  GUI.h  GUI.h.gch  Interrupt.h  LightGate.h  LimitSwitch.h  MakeDrink.h  Motor.h  step_motor.h
CocktailMachine/UnitTests/: DataBaseUnitTest.cpp  DataBaseUnitTest.h  LimSwitchWithMotorUnitTest.cpp  LimSwitchWithMotorUnitTest.h  LimitSwitchUnitTest.cpp  LogicTest.cpp  MotorButtonUnitTest.cpp  MotorButtonUnitTest.h  MotorFinalUnitTest.cpp  PIRUnitTest.cpp  PIRUnitTest.h  gpioChecker.cpp  gpioChecker.h
CocktailMachine/src/: DataClass.cpp  GUI.cpp  IngredientClass.cpp  IngredientIndexClass.cpp  Interrupt.cpp  LightgateClass.cpp  LimitSwitchClass.cpp  MakeDrink.cpp  MotorClass.cpp  SystemConfig.cpp
Data/: cocktail_table.csv
Include/: Data.h  Indexes.h  Ingredient.h  LightGate.h  LimitSwitch.h  Motor.h  SWITCH_CONTROL_H.h  SystemConfig.h  step_motor.h  switch_control.cpp  switch_control_main.cpp
Roy unit Test/: DataClass.cpp  LimitSwitchClass.cpp
UnitTests/: DataBaseUnitTest.cpp  DataBaseUnitTest.h  LightgateUnitTest.h  LimitSwitchUnitTest.cpp  LimitSwitchUnitTest.h  LogicTest.cpp  LogicTest.h  lightGateUnitTest.cpp
backend/: backend.sln
backend/backend/: backend.vcxproj  backend.vcxproj.filters  main.cpp
build-cocktail_machine_front_end-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-cocktail_machine_front_end-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-cocktail_machine_front_end-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-cocktail_machine_front_end-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/cocktail_machine_front_end_autogen/: deps  mocs_compilation.cpp
build-cocktail_machine_front_end-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/cocktail_machine_front_end_autogen/EWIEGA46WW/: moc_mainwindow.cpp  (+3 more)
cocktail_machine_backend/: cocktail_machine_backend.sln
cocktail_machine_backend/cocktail_machine_backend/: backend.cpp  cocktail_machine_backend.vcxproj
cocktail_machine_front_end/: CMakeLists.txt  config_window.cpp  config_window.h  config_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  system_status.cpp  system_status.h  system_status.ui
src/: DataClass.cpp  IngredientClass.cpp  IngredientIndexClass.cpp  LightgateClass.cpp  LimitSwitchClass.cpp  MotorClass.cpp  SystemConfig.cpp  main.cpp
(+61 files in other folders)
